--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,185 @@
-.App {
+*{
+  margin:0;
+  padding:0;
+}
+.back{
+  margin: 60px;
+}
+body{
+  background-color: #FFFFFF;
+}
+.lyf{
+  font-family: "Crimson Text" sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  float:left;
+  line-height: 40px;
+}
+
+.login{
+  border-radius:20px ;
+  padding: 12px;
+  background-color:#FFFFFF;
+  color:#0A0A0A;
+  margin-right: 25px;
+  position:relative;
+  left: 300px;
+}
+
+.getstarted{
+  border-radius:20px ;
+  padding: 12px;
+  background-color:#0A0A0A;
+  color:#FFFFFF;
+  margin-right: 25px;
+  position: relative;
+  left:350px;
+}
+
+.container{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 500px;
 }
 
-.App-link {
-  color: #61dafb;
+header{
+  margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+h1{
+  margin-bottom: 15px;
+  font-size: 50px;
+  line-height: 60px;
+  font-weight: 900;
+  font-family: sans-serif, Roboto,arial;
+}
+ 
+h3{
+  margin-bottom: 15px;
+}
+
+h4{
+  margin-bottom: 20px;
+}
+
+ p{
+  font-size: 9px;
+  margin-bottom: 15px;
+ }
+
+input{
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  width:300px;
+  height: 45px;
+  margin-right: 20px;         
+}
+
+.percentage{
+  font-family: sans-serif, Roboto, arial;
+  font-weight:700;
+  font-size: 23px;
+  margin-top: 15px;
+}
+
+
+.signbtn{
+border-radius:20px ;
+padding: 15px;
+background-color: #0A0A0A;
+color: #FFFFFF;
+margin-left: 20px;
+}
+.explore{
+  float:right;
+  font-weight: bold;
+
+}
+
+.featured{
+  float:left;
+  font-weight: bold;
+}
+
+.box-grid{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 35px;
+  background-color: aqua;
+}
+
+.box{
+  width:150px;
+  height: 150px;
+  border-radius: 20px;
+  margin-bottom: 45px;
+  padding:50px;
+  line-height: 20px;
+}
+
+
+#box1{
+  background-color: #5ECCA0;
+}
+
+#box2{
+  background-color: #0A0A0A;
+  color: #FFFFFF;
+}
+
+#box3{
+  background-color: #CB9BFA;
+}
+
+#box4{
+  background-color:#F8FD91 ;
+}
+
+img{
+  width: 30px;
+  background-color: #202020;
+  color: #FFFFFF;
+  border-radius: 10px;
+}
+.bottom-arrow{
+  background-color: #FFFFFF;
+}
+.blackbox{
+  background-color: #FFFFFF;
+  color: #202020;
+}
+.wrapper{
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  margin-top: 5rem;
+}
+
+footer{
+}
+
+@media(max-width:600px){
+  .back{
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  h1{
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 20px;
+    line-height: 40px;
+    font-weight: 500;
+    font-family: sans-serif, Roboto,arial;
+  }
+
+  input{
+    width:150px;
+    height: 25px;         
+  }
+  
+
+  .wrapper{
+    text-align: center;
+    display:grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
